Grid Created a grid header file and implementation file Initialized grid components in grid header file Defined values for numRows, numCols, & cellSize.

--- a/tetris-raylib.vcxproj.filters
+++ b/tetris-raylib.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="tetris-raylib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="grid.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="grid.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
