Colors 'colors' header file and implementation file was created GetCellColors() function was transferred to colors.cpp

--- a/tetris-raylib.vcxproj
+++ b/tetris-raylib.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="colors.cpp" />
     <ClCompile Include="grid.cpp" />
     <ClCompile Include="position.cpp" />
     <ClCompile Include="tetris-raylib.cpp">
@@ -144,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="block.h" />
+    <ClInclude Include="colors.h" />
     <ClInclude Include="grid.h" />
     <ClInclude Include="position.h" />
   </ItemGroup>
