Block Block implementation file was created Individiual block implementation file was created Draw() function for blocks were created Block rotation header file and implementation file was created block-subclass.cpp added in main file

--- a/tetris-raylib.vcxproj
+++ b/tetris-raylib.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="block.cpp" />
+    <ClCompile Include="block-subclass.cpp" />
     <ClCompile Include="colors.cpp" />
     <ClCompile Include="grid.cpp" />
     <ClCompile Include="position.cpp" />
