--- a/tetris-raylib.vcxproj.filters
+++ b/tetris-raylib.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="colors.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="block-subclass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="block.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="grid.h">
