Game Class Game header file and implementation file was created. GetRandomBlock() function was created. GetAllBlocks() function was created.

--- a/tetris-raylib.vcxproj
+++ b/tetris-raylib.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="block.cpp" />
     <ClCompile Include="block-subclass.cpp" />
     <ClCompile Include="colors.cpp" />
+    <ClCompile Include="game.cpp" />
     <ClCompile Include="grid.cpp" />
     <ClCompile Include="position.cpp" />
     <ClCompile Include="tetris-raylib.cpp">
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="block.h" />
     <ClInclude Include="colors.h" />
+    <ClInclude Include="game.h" />
     <ClInclude Include="grid.h" />
     <ClInclude Include="position.h" />
   </ItemGroup>
