updated Game file

--- a/tetris-raylib.vcxproj
+++ b/tetris-raylib.vcxproj
@@ -157,6 +157,8 @@
   <ItemGroup>
     <ClInclude Include="block.h" />
     <ClInclude Include="colors.h" />
+    <ClInclude Include="configs.h" />
+    <ClInclude Include="constants.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="grid.h" />
     <ClInclude Include="position.h" />
